[package]
name = "esp32c6"
version = "0.1.0"
edition = "2024"

[dependencies]
mb85rc = { path = "../.." }
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
esp-bootloader-esp-idf = "0.1.0"
esp-println = { version = "0.15.0", features = ["esp32c6", "log-04"] }
esp-hal = { version = "1.0.0-beta.1", features = ["esp32c6", "unstable"] } 
embedded-hal-bus = "0.3.0"

log = "0.4.27"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
